<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cadastro_empresa.CadastroEmpresaActivity" android:background="@android:color/white">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/cnt_title"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="TODO" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="#122751"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="Cadastro de Empresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp" android:textSize="24sp" android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:imeOptions="actionDone"
                android:inputType="text|textCapWords" android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" android:textColorLink="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary" android:shadowColor="@color/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_cep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/radio_group"
            app:layout_constraintEnd_toStartOf="@+id/spinner" android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cep"
                android:imeOptions="actionDone"
                android:inputType="number" android:textColor="@color/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="90dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"

            android:textSize="24sp"
            android:textColor="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_endereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/input_cep">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:imeOptions="actionDone"
                android:inputType="text|textCapWords" android:textColor="@color/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/cadastrar_empresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_cadastrar" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/input_endereco" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" android:textSize="24sp"/>

    <Button
            android:text="@string/listar_empresas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_listar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" android:textSize="24sp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />


    <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"

            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/input_nome">
        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Segmento: "
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>
        <RadioButton
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carga"
                android:onClick="radio_button_click"
                android:textColor="@color/colorPrimary" android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" android:textColorLink="@color/colorPrimary"
                android:textSize="18sp"/>
        <RadioButton
                android:id="@+id/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rodoviário"
                android:onClick="radio_button_click" android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorPrimary" android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" android:textSize="18sp"/>
    </RadioGroup>







    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>